// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Project/View default 1`] = `
.c28 {
  height: 155px;
}

.c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c29 {
  position: fixed;
  padding: 40px 0 36px;
  bottom: 0;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c27 {
  cursor: pointer;
  margin-bottom: 30px;
  color: #FFF;
  -webkit-transition: border 400ms;
  transition: border 400ms;
  border-bottom: 1px solid transparent;
}

.c27:hover {
  border-bottom: 1px solid #FFF;
}

.c26 {
  border-top: 2px solid #2F2F36;
  padding-top: 35px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  width: calc(100% - 50px);
}

.c2 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  margin: 20px -20px 0 0;
  padding-right: 20px;
  -webkit-overflow-scrolling: touch;
}

.c3 {
  list-style: none;
  margin: 0;
  padding: 0;
  margin-bottom: 20px;
}

.c5 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c4 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #2F2F36;
  padding: 8px 0 13px;
}

.c4 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c4:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c6 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
}

.c6 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c6 a {
  padding: 8px 0;
}

.c7 {
  display: none;
}

.c10 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  text-align: center;
  border-bottom: 2px solid #2F2F36;
  cursor: pointer;
}

.c10:hover {
  border-bottom-color: #FFF;
}

.c8 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  text-align: center;
  border-bottom: 2px solid #FFF;
  cursor: pointer;
}

.c8:hover {
  border-bottom-color: #FFF;
}

.c9 {
  color: #FFF;
  display: block;
  padding: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  font-weight: 600;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 100vh;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c16 {
  list-style: none;
  font-size: 14px;
  padding: 0;
  margin-bottom: 0;
}

.c17 {
  color: #FFF;
  margin-bottom: 4px;
  border-top: 2px solid #2F2F36;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c21 {
  color: #FFF;
  margin-bottom: 4px;
  border-top: 2px solid #2F2F36;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c22 {
  color: #FFF;
  margin-bottom: 4px;
  border-top: 2px solid #2F2F36;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c23 {
  color: #FFF;
  margin-bottom: 4px;
  border-top: 2px solid #2F2F36;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c24 {
  color: #FFF;
  margin-bottom: 4px;
  border-top: 2px solid #2F2F36;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c25 {
  color: #FFF;
  margin-bottom: 4px;
  border-top: 2px solid #2F2F36;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: calc(100% - 37px);
  padding: 12px 0 8px 0;
}

.c19 {
  color: #71737e;
  margin-right: 5px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c20 {
  color: #FFF;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  white-space: pre-wrap;
  word-break: break-word;
}

.c12 {
  margin-bottom: 15px;
  padding: 0;
}

.c13 {
  font-size: 12px;
  display: inline-block;
  width: calc(50% - 7px);
  margin-bottom: 14px;
}

.c13:nth-child(2n + 1) {
  margin-right: 7px;
}

.c13:nth-child(2n) {
  margin-left: 7px;
}

.c14 {
  font-size: 12px;
}

.c15 {
  display: block;
  font-size: 66px;
  line-height: 1.09;
  font-weight: 500;
}

@media (min-width:1040px) {
  .c30 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1040px) {
  .c29 {
    width: 1000px;
  }
}

@media (min-width:1040px) {
  .c1 {
    display: none;
  }
}

@media (min-width:1040px) {
  .c7 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin: 29px 0 20px 0;
    font-size: 15px;
  }
}

@media (min-width:1040px) {
  .c11 {
    margin-top: 70px;
  }
}

@media (min-width:1040px) {
  .c16 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media (min-width:1040px) {
  .c17 {
    border-top-color: #1d1d20;
    width: calc(50% - 10px);
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    -webkit-order: 1;
    -ms-flex-order: 1;
    order: 1;
  }
}

@media (min-width:1040px) {
  .c21 {
    border-top-color: #1d1d20;
    width: calc(50% - 10px);
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    -webkit-order: 3;
    -ms-flex-order: 3;
    order: 3;
  }
}

@media (min-width:1040px) {
  .c22 {
    border-top-color: #1d1d20;
    width: calc(50% - 10px);
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    -webkit-order: 5;
    -ms-flex-order: 5;
    order: 5;
  }
}

@media (min-width:1040px) {
  .c23 {
    border-top-color: #1d1d20;
    width: calc(50% - 10px);
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
  }
}

@media (min-width:1040px) {
  .c24 {
    border-top-color: #1d1d20;
    width: calc(50% - 10px);
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    -webkit-order: 4;
    -ms-flex-order: 4;
    order: 4;
  }
}

@media (min-width:1040px) {
  .c25 {
    border-top-color: #1d1d20;
    width: calc(50% - 10px);
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    -webkit-order: 6;
    -ms-flex-order: 6;
    order: 6;
  }
}

@media (min-width:1040px) {
  .c18 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    font-weight: normal;
  }
}

@media (min-width:1040px) {
  .c19 {
    font-size: 14px;
    margin-bottom: 6px;
  }
}

@media (min-width:1040px) {
  .c20 {
    font-size: 18px;
  }
}

@media (min-width:1040px) {
  .c12 {
    margin-bottom: 30px;
    margin-left: -15px;
  }
}

@media (min-width:1040px) {
  .c13 {
    font-size: 18px;
    width: calc(25% - 15px);
  }

  .c13:nth-child(2n + 1) {
    margin-right: 0;
    margin-left: 15px;
  }

  .c13:nth-child(2n) {
    margin-left: 15px;
  }
}

@media (min-width:1040px) {
  .c14 {
    font-size: 18px;
  }
}

@media (min-width:1040px) {
  .c15 {
    padding-top: 40px;
    font-size: 108px;
    line-height: 1em;
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="c0"
  >
    <div>
      <div
        className="c1"
      >
        <div
          style={
            Object {
              "alignItems": "flex-start",
              "color": "#FFF",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingBottom": "18px",
              "width": "100%",
            }
          }
        >
          <div>
            <div
              className=""
            >
              <h2
                id="headerTitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 100,
                    "margin": 0,
                  }
                }
              >
                Project
              </h2>
              <h1
                id="headerSubtitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
              >
                Project Name
              </h1>
            </div>
          </div>
          <button
            disabled={false}
            id="topHeaderOpenMenuBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 0,
                "top": 6,
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#000",
              "color": "#FFF",
              "maxWidth": null,
              "minHeight": "100vh",
              "padding": "18px 20px 27px",
              "position": "fixed",
              "right": 0,
              "textAlign": "left",
              "top": 0,
              "transform": "translateX(100%)",
              "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
              "visibility": 0,
              "width": "100%",
              "zIndex": 9999,
            }
          }
        >
          <div
            className=""
          >
            <div
              className=""
            >
              <h2
                id="headerTitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 100,
                    "margin": 0,
                  }
                }
              >
                Project
              </h2>
              <h1
                id="headerSubtitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
              >
                Project Name
              </h1>
            </div>
          </div>
          <div
            className="c2"
          >
            <ul
              className="c3"
            >
              <li
                className="c4"
              >
                <a
                  href="/project/100/datasource"
                  id={null}
                  onClick={[Function]}
                >
                  Data Sources
                </a>
              </li>
            </ul>
            <ul
              className="c5"
            >
              <li
                className="c6"
              >
                <a
                  href="/project/edit/100"
                  id={null}
                  onClick={[Function]}
                >
                  Edit Project Settings
                </a>
              </li>
              <li
                className="c6"
                id={null}
                onClick={[Function]}
              >
                Delete Project
              </li>
              <li
                className="c6"
              >
                <a
                  href="/logout"
                  id={null}
                  onClick={[Function]}
                >
                  Log Out
                </a>
              </li>
            </ul>
          </div>
          <button
            disabled={false}
            id="topHeaderCloseMenuButton"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 0,
                "top": "6px",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className=""
      >
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <a
              className="c9"
              href="/project/100"
              onClick={[Function]}
            >
              <span>
                Settings
              </span>
            </a>
          </div>
          <div
            className="c10"
          >
            <a
              className="c9"
              href="/project/100/datasource"
              onClick={[Function]}
            >
              <span>
                Sources
              </span>
            </a>
          </div>
          <div
            className="c10"
          >
            <a
              className="c9"
              href="/project/100/user"
              onClick={[Function]}
            >
              <span>
                Users
              </span>
            </a>
          </div>
          <div
            className="c10"
          >
            <a
              className="c9"
              href="/project/100/directory"
              onClick={[Function]}
            >
              <span>
                Directories
              </span>
            </a>
          </div>
        </div>
      </div>
      <div
        className="c11"
      >
        <ul
          className="c12"
        >
          <li
            className="c13"
          >
            <div
              id="projectDataSources"
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderTop": "2px solid #FFF",
                  "color": "#FFF",
                  "cursor": "pointer",
                  "display": "flex",
                  "flexDirection": "column",
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "12px",
                  "justifyContent": "space-between",
                  "padding": "12px 14px 14px",
                  "position": "relative",
                }
              }
            >
              <div>
                <div
                  style={
                    Object {
                      "color": undefined,
                      "marginBottom": 14,
                    }
                  }
                >
                  <span
                    className="c14"
                  >
                    Data Sources
                  </span>
                </div>
                <span
                  className="c15"
                  id="projectDataSourcesValue"
                >
                  3
                </span>
              </div>
            </div>
          </li>
          <li
            className="c13"
          >
            <div
              id="projectUsers"
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderTop": "2px solid #FFF",
                  "color": "#FFF",
                  "cursor": "pointer",
                  "display": "flex",
                  "flexDirection": "column",
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "12px",
                  "justifyContent": "space-between",
                  "padding": "12px 14px 14px",
                  "position": "relative",
                }
              }
            >
              <div>
                <div
                  style={
                    Object {
                      "color": undefined,
                      "marginBottom": 14,
                    }
                  }
                >
                  <span
                    className="c14"
                  >
                    Users
                  </span>
                </div>
                <span
                  className="c15"
                  id="projectUsersValue"
                >
                  2
                </span>
              </div>
            </div>
          </li>
        </ul>
        <ul
          className="c16"
        >
          <li
            className="c17"
            order={1}
          >
            <div
              className="c18"
              id="fieldLastUpdated"
            >
              <span
                className="c19"
                id="fieldLastUpdatedLabel"
              >
                Last Update
              </span>
              <span
                className="c20"
                id="fieldLastUpdatedValue"
              >
                3 months ago
              </span>
            </div>
          </li>
          <li
            className="c21"
            order={3}
          >
            <div
              className="c18"
              id="fieldStatus"
            >
              <span
                className="c19"
                id="fieldStatusLabel"
              >
                Status
              </span>
              <span
                className="c20"
                id="fieldStatusValue"
              >
                Status
              </span>
            </div>
          </li>
          <li
            className="c22"
            order={5}
          >
            <div
              className="c18"
              id="fieldOwner"
            >
              <span
                className="c19"
                id="fieldOwnerLabel"
              >
                Owner
              </span>
              <span
                className="c20"
                id="fieldOwnerValue"
              >
                Firstname Lastname
              </span>
            </div>
          </li>
          <li
            className="c23"
            order={2}
          >
            <div
              className="c18"
              id="fieldTitle"
            >
              <span
                className="c19"
                id="fieldTitleLabel"
              >
                Title
              </span>
              <span
                className="c20"
                id="fieldTitleValue"
              >
                Project Name
              </span>
            </div>
          </li>
          <li
            className="c24"
            order={4}
          >
            <div
              className="c18"
              id="fieldDescription"
            >
              <span
                className="c19"
                id="fieldDescriptionLabel"
              >
                Description
              </span>
              <span
                className="c20"
                id="fieldDescriptionValue"
              >
                Description
              </span>
            </div>
          </li>
          <li
            className="c25"
            order={6}
          >
            <div
              className="c18"
              id="fieldSlug"
            >
              <span
                className="c19"
                id="fieldSlugLabel"
              >
                API
              </span>
              <span
                className="c20"
                id="fieldSlugValue"
              >
                schemacms/api/project_title
              </span>
            </div>
          </li>
        </ul>
      </div>
      <div
        className="c26"
      >
        <span
          className="c27"
          id="deleteProjectDesktopBtn"
          onClick={[Function]}
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "14px",
            }
          }
        >
          <span>
            Delete Project
          </span>
        </span>
      </div>
    </div>
    <div
      className="c28"
    >
      <div
        className="c29"
      >
        <div
          className="c30"
        >
          <button
            disabled={false}
            id="addProjectBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Project/View loading 1`] = `
.c14 {
  height: 155px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c15 {
  position: fixed;
  padding: 40px 0 36px;
  bottom: 0;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c13 {
  cursor: pointer;
  margin-bottom: 30px;
  color: #FFF;
  -webkit-transition: border 400ms;
  transition: border 400ms;
  border-bottom: 1px solid transparent;
}

.c13:hover {
  border-bottom: 1px solid #FFF;
}

.c12 {
  border-top: 2px solid #2F2F36;
  padding-top: 35px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c11 {
  color: #FFF;
  text-align: center;
  padding: 50px 10px;
  font-weight: 200;
  font-size: 20px;
}

.c1 {
  width: calc(100% - 50px);
}

.c2 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  margin: 20px -20px 0 0;
  padding-right: 20px;
  -webkit-overflow-scrolling: touch;
}

.c3 {
  list-style: none;
  margin: 0;
  padding: 0;
  margin-bottom: 20px;
}

.c5 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c4 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #2F2F36;
  padding: 8px 0 13px;
}

.c4 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c4:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c6 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
}

.c6 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c6 a {
  padding: 8px 0;
}

.c7 {
  display: none;
}

.c10 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  text-align: center;
  border-bottom: 2px solid #2F2F36;
  cursor: pointer;
}

.c10:hover {
  border-bottom-color: #FFF;
}

.c8 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  text-align: center;
  border-bottom: 2px solid #FFF;
  cursor: pointer;
}

.c8:hover {
  border-bottom-color: #FFF;
}

.c9 {
  color: #FFF;
  display: block;
  padding: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  font-weight: 600;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 100vh;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (min-width:1040px) {
  .c16 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1040px) {
  .c15 {
    width: 1000px;
  }
}

@media (min-width:1040px) {
  .c1 {
    display: none;
  }
}

@media (min-width:1040px) {
  .c7 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin: 29px 0 20px 0;
    font-size: 15px;
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="c0"
  >
    <div>
      <div
        className="c1"
      >
        <div
          style={
            Object {
              "alignItems": "flex-start",
              "color": "#FFF",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingBottom": "18px",
              "width": "100%",
            }
          }
        >
          <div>
            <div
              className=""
            >
              <h2
                id="headerTitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 100,
                    "margin": 0,
                  }
                }
              >
                Project
              </h2>
              <h1
                id="headerSubtitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
              />
            </div>
          </div>
          <button
            disabled={false}
            id="topHeaderOpenMenuBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 0,
                "top": 6,
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#000",
              "color": "#FFF",
              "maxWidth": null,
              "minHeight": "100vh",
              "padding": "18px 20px 27px",
              "position": "fixed",
              "right": 0,
              "textAlign": "left",
              "top": 0,
              "transform": "translateX(100%)",
              "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
              "visibility": 0,
              "width": "100%",
              "zIndex": 9999,
            }
          }
        >
          <div
            className=""
          >
            <div
              className=""
            >
              <h2
                id="headerTitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 100,
                    "margin": 0,
                  }
                }
              >
                Project
              </h2>
              <h1
                id="headerSubtitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
              />
            </div>
          </div>
          <div
            className="c2"
          >
            <ul
              className="c3"
            >
              <li
                className="c4"
              >
                <a
                  href="/project/100/datasource"
                  id={null}
                  onClick={[Function]}
                >
                  Data Sources
                </a>
              </li>
            </ul>
            <ul
              className="c5"
            >
              <li
                className="c6"
              >
                <a
                  href="/project/edit/100"
                  id={null}
                  onClick={[Function]}
                >
                  Edit Project Settings
                </a>
              </li>
              <li
                className="c6"
                id={null}
                onClick={[Function]}
              >
                Delete Project
              </li>
              <li
                className="c6"
              >
                <a
                  href="/logout"
                  id={null}
                  onClick={[Function]}
                >
                  Log Out
                </a>
              </li>
            </ul>
          </div>
          <button
            disabled={false}
            id="topHeaderCloseMenuButton"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 0,
                "top": "6px",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className=""
      >
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <a
              className="c9"
              href="/project/100"
              onClick={[Function]}
            >
              <span>
                Settings
              </span>
            </a>
          </div>
          <div
            className="c10"
          >
            <a
              className="c9"
              href="/project/100/datasource"
              onClick={[Function]}
            >
              <span>
                Sources
              </span>
            </a>
          </div>
          <div
            className="c10"
          >
            <a
              className="c9"
              href="/project/100/user"
              onClick={[Function]}
            >
              <span>
                Users
              </span>
            </a>
          </div>
          <div
            className="c10"
          >
            <a
              className="c9"
              href="/project/100/directory"
              onClick={[Function]}
            >
              <span>
                Directories
              </span>
            </a>
          </div>
        </div>
      </div>
      <div
        className="c11"
      >
        <span>
          Loading...
        </span>
      </div>
      <div
        className="c12"
      >
        <span
          className="c13"
          id="deleteProjectDesktopBtn"
          onClick={[Function]}
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "14px",
            }
          }
        >
          <span>
            Delete Project
          </span>
        </span>
      </div>
    </div>
    <div
      className="c14"
    >
      <div
        className="c15"
      >
        <div
          className="c16"
        >
          <button
            disabled={false}
            id="addProjectBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
